--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <!-- ============ HERO (video) ============ -->
   <section class="hero">
     <video class="hero__video" autoplay muted loop playsinline preload="metadata" poster="src/assets/hero-fleet.jpg">
-      <source src="src/assets/hero-video.mp4" type="video/mp4" />
+      <source src="src/assets/hero-video1.mp4" type="video/mp4" />
     </video>
     <div class="hero__overlay"></div>
 
