--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </section>
 
   
- <!-- ========== QUIÉNES SOMOS (drop-in) ========== -->
+<!-- ========== QUIÉNES SOMOS (drop-in) ========== -->
 <section class="about" id="about">
   <div class="container about__grid">
     <!-- Text -->
@@ -216,8 +216,34 @@
   /* Grid + alignment */
   #about .about__grid{
     display:grid;
-    grid-template-
+    grid-template-columns:1fr;
+    gap:28px;
+    align-items:stretch; /* ensures the media column gets full height */
+  }
+  @media (min-width:1024px){
+    #about .about__grid{ grid-template-columns:1fr 1fr; gap:48px; }
+  }
+
+  /* Make the video fill the box height */
+  #about .video-box{
+    position:relative;
+    height:100%;
+    min-height:420px;           /* visible even on shorter viewports */
+    border-radius:18px;
+    overflow:hidden;
+    box-shadow:var(--shadow-md, 0 10px 24px rgba(15,23,42,.12));
+    background:#000;
+  }
+  #about .video-box iframe{
+    position:absolute; inset:0;
+    width:100%; height:100%;    /* full coverage of the box */
+    display:block;
+  }
 </style>
+
+<!-- Vimeo API (safe to include even if already loaded elsewhere) -->
+<script src="https://player.vimeo.com/api/player.js"></script>
+
 
   <!-- Servicios (unchanged) -->
   <section class="services" id="servicios">
