--- a/index.html
+++ b/index.html
@@ -168,82 +168,36 @@
   </section>
 
   
-<!-- ========== QUIÉNES SOMOS (drop-in) ========== -->
-<section class="about" id="about">
-  <div class="container about__grid">
-    <!-- Text -->
-    <div class="about__text">
-      <h2 class="section-title">Quiénes Somos</h2>
-      <h3 class="about__subtitle">GRASASBIO S.A.S.</h3>
+ <!-- Quiénes Somos (with playable Vimeo video, not muted) -->
+  <section class="about" id="about">
+    <div class="container about__grid">
+      <div class="about__text">
+        <h2 class="section-title">Quiénes Somos</h2>
+        <h3 class="about__subtitle">GRASASBIO S.A.S.</h3>
+        <p>Somos una empresa colombiana líder en la gestión de <strong>aceites de cocina usados (ACU)</strong> y otras grasas vegetales y animales.</p>
+        <p>Brindamos servicios al sector gastronómico e industrial, cumpliendo con altos estándares de calidad, seguridad y atención al cliente. Nuestro propósito es reducir el impacto ambiental y proteger la salud pública a través de una operación ética, sostenible y responsable.</p>
+        <h4 class="about__commit-title">Estamos comprometidos con:</h4>
+        <ul class="about__commit-list">
+          <li>✔️ Cumplir la normativa ambiental vigente</li>
+          <li>✔️ Generar bienestar en nuestras comunidades</li>
+          <li>✔️ Promover la economía circular</li>
+        </ul>
+        <a href="nosotros.html" class="btn btn--primary">Conoce Más Sobre Nosotros</a>
+      </div>
 
-      <p>
-        Somos una empresa colombiana líder en la gestión de
-        <strong>aceites de cocina usados (ACU)</strong> y otras grasas vegetales y animales.
-      </p>
-      <p>
-        Brindamos servicios al sector gastronómico e industrial, cumpliendo con altos estándares de calidad,
-        seguridad y atención al cliente. Nuestro propósito es reducir el impacto ambiental y proteger la salud
-        pública a través de una operación ética, sostenible y responsable.
-      </p>
-
-      <h4 class="about__commit-title">Estamos comprometidos con:</h4>
-      <ul class="about__commit-list">
-        <li>✔️ Cumplir la normativa ambiental vigente</li>
-        <li>✔️ Generar bienestar en nuestras comunidades</li>
-        <li>✔️ Promover la economía circular</li>
-      </ul>
-
-      <a href="nosotros.html" class="btn btn--primary">Conoce Más Sobre Nosotros</a>
-    </div>
-
-    <!-- Video (fills full height of its box) -->
-    <div class="about__media">
-      <div class="video-box" aria-label="Video institucional">
-        <iframe
-          src="https://player.vimeo.com/video/1115942104?badge=0&autopause=1&title=0&byline=0&portrait=0"
-          frameborder="0"
-          allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          title="Videocorporativo">
-        </iframe>
+      <div class="about__media">
+        <div class="video-box" aria-label="Video institucional">
+          <iframe 
+            src="https://player.vimeo.com/video/1115942104?badge=0&autopause=1&title=0&byline=0&portrait=0"
+            frameborder="0"
+            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            title="Videocorporativo">
+          </iframe>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-
-<!-- Scoped fixes for this section only -->
-<style>
-  /* Grid + alignment */
-  #about .about__grid{
-    display:grid;
-    grid-template-columns:1fr;
-    gap:28px;
-    align-items:stretch; /* ensures the media column gets full height */
-  }
-  @media (min-width:1024px){
-    #about .about__grid{ grid-template-columns:1fr 1fr; gap:48px; }
-  }
-
-  /* Make the video fill the box height */
-  #about .video-box{
-    position:relative;
-    height:100%;
-    min-height:420px;           /* visible even on shorter viewports */
-    border-radius:18px;
-    overflow:hidden;
-    box-shadow:var(--shadow-md, 0 10px 24px rgba(15,23,42,.12));
-    background:#000;
-  }
-  #about .video-box iframe{
-    position:absolute; inset:0;
-    width:100%; height:100%;    /* full coverage of the box */
-    display:block;
-  }
-</style>
-
-<!-- Vimeo API (safe to include even if already loaded elsewhere) -->
-<script src="https://player.vimeo.com/api/player.js"></script>
-
+  </section>
 
   <!-- Servicios (unchanged) -->
   <section class="services" id="servicios">
